# twitter-categorizer

./: README.md  pyproject.toml
code/: baseline.py  cleaning.py  main.py
